[tool.poetry]
name = "ngv-tech-demo"
version = "0.1.0"
description = ""
authors = ["Richard Ikegbulam <malpacon101@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
pandas = "^2.2.3"
pandas-datareader = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
